# NeuroCI

./: .flake8  .gitignore  .pre-commit-config.yaml  Experiment_Definition.yaml  NeuroCI.py  Prevent-AD.json  README.md  analysesVisualizations.py  cache.json  cacheOps.py  cbrainAPI.py  config.yml  experiment_definition.yaml  nervIntegration.py  neuroCIdata.py  pyproject.toml  requirements.txt  slurmAPI.py  temp_CI_cache (copy).json  temp_CI_cache.json  test_cacheOps.py  test_cbrainAPI.py  updateCache.py  utils.py
.circleci/: config.yml
.github/workflows/: ci_trigger.yml
Config_Files/: CBRAIN_IDs.yaml
Related_Files/Other/: earlyCacheExample.json
Related_Files/Scripts/: registrationTool.py  subfolderExtractor.json  terminate_tasks.py  unused_CONPGetter.sh
Related_files/Other/: Singularity.txt
Related_files/Scripts/: flattenDataForDP.sh
Task_Parameters/: FSL_BET.json  FSL_First.json  FSL_Stats.json  FreeSurfer_recon_all.json  Subfolder_File_Extractor_FSL.json  Subfolder_File_Extractor_FreeSurfer_1.json  Subfolder_File_Extractor_FreeSurfer_2.json
Tests/: test_cacheOps.py  test_cbrainAPI.py  test_cbrainAPI_new.py
config_files/: ssh_config
experiment_state/FastSurfer/: manifest.tsv
experiment_state/PreventAD/: manifest.tsv
experiment_state/Rockland/: manifest.tsv
experiment_state/ds002345/: global_config.json  manifest.tsv
experiment_state/ds003592/: global_config.json  manifest.tsv
experiment_state/ds004101/: global_config.json  manifest.tsv
experiment_state/ds005752/: manifest.tsv
experiment_state/ds006039/: manifest.tsv
experiment_state/ds006267/: global_config.json  manifest.tsv
experiment_state/figures/: age_correlation_summary.csv  age_correlation_summary_spearman.csv  df_tidy.csv  df_wide.csv  (+5 more)
neuroci_code/: experiment.py  file_utils.py  main.py  ssh_utils.py
tests/: test_cacheOps.py
unit_tests/: test_experiment.py  test_file_utils.py  test_ssh_utils.py
user_scripts/: userscript1.py  userscript2.py  userscript3.py
(+114 files in other folders)
